--- a/src/styling/WhoWeAre.css
+++ b/src/styling/WhoWeAre.css
@@ -5,6 +5,7 @@
     gap: 1%;
     background-color: #f5f2eb;
     height: 100%;
+    overflow:auto;
 }
 
 .image1 {
@@ -47,4 +48,29 @@
     color: #333;
     width: 90%;
     margin-bottom: -1%;
+}
+
+.justification {
+    grid-column: 1 / span 2;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    text-align: left;
+    overflow: scroll;
+}
+
+.justification h2 {
+    margin-top: 0%;
+}
+
+.justification h3 {
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+.justification p {
+    margin-bottom: 0%;
+}
+
+.justification ul {
+    text-align: left;
 }
