--- a/src/styling/WhoWeAre.css
+++ b/src/styling/WhoWeAre.css
@@ -5,7 +5,7 @@
     gap: 1%;
     background-color: #f5f2eb;
     height: 100%;
-    overflow:auto;
+    overflow:visible;
 }
 
 .image1 {
@@ -56,7 +56,8 @@
     flex-direction: column;
     align-self: flex-start;
     text-align: left;
-    overflow-y: scroll;
+    flex_grow: 1;
+    overflow: scroll;
 }
 
 .justification h2 {
