--- a/src/styling/WhoWeAre.css
+++ b/src/styling/WhoWeAre.css
@@ -4,7 +4,7 @@
     grid-template-rows: 48% 50%;
     gap: 1%;
     background-color: #f5f2eb;
-    height: 100%;
+    height: auto;
     overflow: scroll;
 }
 
