--- a/src/styling/WhoWeAre.css
+++ b/src/styling/WhoWeAre.css
@@ -53,6 +53,7 @@
 
 .justification {
     grid-column: 1 / span 2;
+    grid-row: 3 / span 4;
     display: flex;
     flex-direction: column;
     align-self: flex-start;
